# emulationWORK

./: 1-1.md  12-13.md  12-31.md  README.md  a.md  newbranch.md  projectWebserver.md  物联网技术基础知识.md
AI项目文档/: breathLED.html  mockDialog.html
Chatbox/: README.md  chat.html  index.html  script.js  style.css
PDF文档/: REDEM.md
algorithm-剑指offer/: 04.FindInPartiallySortedMatrix.cpp  05.ReplaceSpace.cpp  06.PrintLinkedListFromTailToHead.cpp  08.NextNodeInBinaryTree.cpp  09.QueueWithTwoStacks.cpp  10.Fibonacci.cpp  11.MinNumberInRotatedArray.cpp
code-study/cmakeLesson/: CMakeLists.txt
code-study/cmakeLesson/src/: main.cpp
leetcode/: 121.maxprofit.cpp  189.rotate.cpp  215.returnKvalue.cpp  221.maximalSquare.cpp  240.searchin2Dmatrix.cpp  26.removeDuplicates.cpp  27.removeElement.cpp  283.moveZero.cpp  80.removeDuplicates.cpp  88.merge-sorted-array.cpp  9.  palindromeNumber.cpp  9.palindromeNumber.cpp
p-个人思考/: 什么是真正的聪明？.md  关于优化我的工作流程的想法：.md  快手极速版本；美团拼多多，签到果园、视频po主有没有群分享下！汽水今日头条支付宝，红包，体育服务，多多有礼，婉转支付宝体育服务.md  有点甜头.md  观特朗普访华之中美博弈思考.md
t-小菜编程日记/: 3年c++经验社招面经.md  CICD.md  QT基础知识学习.md  Qt项目练习.md  TCPIP网络协议栈的学习.md  async.py  ball.html  c++11新特性.md  c++性能调优方案.md  deepseek.py  gpt-researcher.md  linux中常见脚本demo.md  mockDialog.html  mysql.cpp  protobuf.md  websocket.md  什么是业务代码？.md  对需求的理解.md  嵌入式笔面试题目.md  微服务.md  数据库学习.md  数据库学习之《MySQL必知必会》.md  最近一段时间的思考.md  物联网技术基础知识.md  程序员十步学习法.md  自测用例.md  设计模式.cpp
t-技术概念/: CICD.md  async.py  c++11新特性.md  c++性能调优方案.md  gpt-researcher.md  gpt给出的一些学习规划.md  json库.md  stl库项目中的最佳实践.md  什么是业务代码？.md  对需求的理解.md  程序员十步学习法.md  自测用例.md  设计模式.cpp
(+11 files in other folders)
